"library_title" = "Library";
"settings_button" = "Settings";
"settings_title" = "Settings";
"settings_autoplay_title" = "AutoPlay Library";
"settings_autoplay_description" = "After finishing an audiobook, playback will resume with all items in the library, including items in folders.";
"settings_smartrewind_title" = "Smart Rewind";
"settings_smartrewind_description" = "Automatically skip backwards when resuming playback. Skips back further the longer playback has been paused, up to a maximum of %@.";
"settings_boostvolume_title" = "Boost Volume";
...
"generic_retry_description" = "Please try again later";
"network_error_title" = "Network Error";
"purchases_restored_title" = "Purchases restored!";
"tip_missing_title" = "You haven't tipped us yet";
"thanks_amazing_title" = "You are amazing!";
"play_title" = "Play";
"pause_title" = "Pause";
"voiceover_no_title" = "No Title";
"voiceover_no_author" = "No Author";
"voiceover_book_progress" = "%@ by %@, %.0f percent completed, duration: %@";
"voiceover_no_file_title" = "No File Title";
"voiceover_no_file_subtitle" = "No File Subtitle";
"voiceover_no_playlist_title" = "No Folder Title";
...
"download_title" = "Download";
"download_incomplete_error" = "The download was incomplete. Please try again.";
"download_prepare_error" = "These items couldn't be prepared for download.";
"cancel_download_title" = "Cancel download";
"remove_downloaded_file_title" = "Remove from device";
"download_from_url_title" = "Download from URL";
"done_title" = "Done";
"select_title" = "Select";
"sort_button_title" = "Sort";
"search_title" = "Search";
"books_title" = "Books";
"book_title" = "Book";
"folders_title" = "Folders";
...
"integration_sign_in_button" = "Sign In";
"integration_retry_button" = "Retry";
"integration_section_server_url" = "Server URL";
"integration_section_server_url_footer" = "Connect to your %@ server";
"integration_section_server" = "Server";
"integration_server_name_label" = "Name";
"integration_server_url_label" = "URL";
"integration_section_login" = "Login";
"integration_username_placeholder" = "Username";
"integration_password_placeholder" = "Password";
"integration_password_remember_me_label" = "Remember Me";
"integration_add_server_button" = "Add Server";
"media_servers_title" = "Media Servers";
...
